--- a/SoManyCDTools/index.html
+++ b/SoManyCDTools/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Präsentationstitel</title>
+    <title>Continuous Delivery: Why do we need so many tools?</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
@@ -40,301 +40,221 @@
     <div class="slides">
 
         <section>
-            <h1>Präsentationstitel</h1>
+            <h1>Continuous Delivery</h1>
+            <p>Why are so so many tools,</p>
+            <p>and what are they needed for?</p>
+            <p>&nbsp;</p>
 
-            <img src="css/imagebilder.png" alt="Imagebilder">
+
 
             <p>
-                Erika Mustermann &amp; Max Mustermann
+                Stephan Rauh
+            </p>
+            <p>
+              <a target="#" href="http://www.beyondJava.net">http://www.beyondJava.net</a>
             </p>
         </section>
 
         <section>
-            <h2>Installation:</h2>
-            <span><code>npm install -g yo</code></span><br>
-            <span><code>npm install</code></span><br>
-            <span><code>grunt serve</code></span><br>
-            <span><code>localhost:8000</code></span><br>
-
-
+            <h2>Goal:</h2>
+            <p>Make deployment easier!</p>
+            <br />
+            <p class="fragment">Can't be so difficult?<br />
+            Just tweak the development process here and there!</p>
         </section>
 
         <section>
-            <h2>Control from smartphone</h2>
-            <p>
-                scan QR Code on right
-            </p>
-        </section>
-
-        <section>Mobile Ready! Pull window small or try on smartphone/tablet</section>
-
-        <section>
-            <h2><span class="caption">1</span>Lorem ipsum</h2>
-
-            <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                sed diam nonumy eirmod tempor invidunt ut labore et dolore.
-            </p>
-        </section>
-
-        <section>
-            <p>Probleme mit dem ausdrucken der Folien?</p>
-
-            --&gt;<a href="https://github.com/hakimel/reveal.js#pdf-export" target="_blank">pdf-export</a>
-        </section>
-
-        <section>
-
-            <section>
-                <h2>Untergeordnete Folien</h2>
+          <section>
+            <h2>Buzzword parade</h2>
+            <p>Virtual machine</p>
+            <p>Vagrant</p>
+            <p>Puppet</p>
+            <p>Ansible</p>
+            <p>Git and GitHub</p>
+            <p>Ubuntu</p>
+            <p>CentOS</p>
+            <p>Docker</p>
+            <p>Provisioning</p>
+            <p>Thoughtworks Go</p>
+            <p>Quality gate</p>
+            <p>Devops</p>
+          </section>
+          <section>
+                <h2>First impressions</h2>
 
                 <p>
-                    Folien könnnen untergeordnet werden
-                    um z. B. tiefer ins Thema einzusteigen.
+                  Continuous Delivery is a world of its own.
+                </p>
+                <p class="fragment">
+                  Unix and Linux play a major role in the CD world.
+                </p>
+                <p class="fragment">
+                  Developers have to learn a new tool chain.
                 </p>
             </section>
-
             <section>
-                <h2>h2 heading</h2>
+                  <h2>But wait!</h2>
 
-                <p>zum navigieren einfach 'oben' oder 'unten' klicken.</p>
-            </section>
+                  <p>
+                    How does learning and adopting a new tool chain developers more productive?
+                  </p>
+              </section>
+        </section>
 
+        <section>
             <section>
-                <h3>h3 heading</h3>
+                <h2>What's it all about?</h2>
 
-                <p>und so weiter!</p>
-            </section>
-
-        </section>
-<section>
-        <section>
-            <h2>Hier eine Auflistung:</h2>
-            <ul>
-                <li class="fragment">Ein Punkt nach</li>
-                <li class="fragment">dem anderen</li>
-                <li class="fragment"><code>&lt;li class=&quot;fragment&quot;&gt;punkt&lt;/li&gt;</code></li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Eine andere Auflistung</h2>
-
-            <ol>
-                <li>eins</li>
-                <li>zwei</li>
-                <li>drei</li>
-            </ol>
-        </section>
-</section>
-        <section>
-            <section data-state="alert">
-                <h2>Powerpoint</h2>
-
+                <ul>
+                  <li>Culture</li>
+                  <li>Tools</li>
+                </ul>
                 <p>
-                    Wer sieht da nicht rot?
-                </p>
-                <code>&lt;section data-state=&quot;alert&quot;&gt;</code>
             </section>
-
-            <section data-state="soothe">
-                <code>&lt;section data-state=&quot;soothe&quot;&gt;</code>
-            </section>
-
-            <section data-state="blackout">
-                <code>&lt;section data-state=&quot;blackout&quot;&gt;</code>
-            </section>
-
-            <section data-state="whiteout">
-                <code>&lt;section data-state=&quot;whiteout&quot;&gt;</code>
-            </section>
-
-            <section data-state="cobalt">
-                <code>&lt;section data-state=&quot;cobalt&quot;&gt;</code>
-            </section>
-
-            <section data-state="mint">
-                <code>&lt;section data-state=&quot;mint&quot;&gt;</code>
-            </section>
-
-            <section data-state="submerge">
-                <code>&lt;section data-state=&quot;submerge&quot;&gt;</code>
-            </section>
-
-            <section data-state="sunset">
-                <code>&lt;section data-state=&quot;sunset&quot;&gt;</code>
-            </section>
-
-            <section data-state="lila">
-                <code>&lt;section data-state=&quot;lila&quot;&gt;</code>
-            </section>
-
         </section>
-
         <section>
-            <h2>Steuern Sie mit Links zwischen den einzelnen Folien</h2>
 
-            <p>
-                Dies sieht dann so aus: <a href="#/2/3">Link</a>
-            </p>
-        </section>
-
-        <section>
             <section>
-                <h2>Markdown support</h2>
-
-                <pre> <code>
-    &lt;section data-markdown&gt;
-        &lt;script type=&quot;text/template&quot;&gt;
-            ## Idee
-
-            * Automatisierung der Beleuchtung in Gebäuden
-            * Speziell Licht in Gemeinschaftsräumen sowie privaten Räumen anhand von Events ein/ausschalten
-            * Events in Form von Bewohner kommt an / verlässt das Gebäude
-        &lt;/script&gt;
-    &lt;/section&gt;
-                </code> </pre>
-            </section>
-
-            <section data-markdown>
-    <script type="text/template">
-        ## Idee
-
-        * Automatisierung der Beleuchtung in Gebäuden
-        * Speziell Licht in Gemeinschaftsräumen sowie privaten Räumen anhand von Events ein/ausschalten
-        * Events in Form von Bewohner kommt an / verlässt das Gebäude
-    </script>
+                <h2>Culture</h2>
             </section>
 
             <section>
-                <h3>Markdown kann syntax highlights</h3>
-                <pre><code>
-            &lt;section data-markdown&gt;
-                &lt;script type=&quot;text/template&quot;&gt;
-                    ### Loading native libraries in Java
+                <h3>Deployment</h3>
 
-                    ```java
-
-        try {
-            System.out.println(&quot;Loading Native Libraries:: Path: &quot; + System.getProperty(&quot;java.library.path&quot;));
-            //loading a library, there are two ways. but it only gets loaded once so doesnt matter if done twice here
-            System.loadLibrary(&quot;RCSwitchAdapter&quot;);
-            System.load(&quot;/usr/local/lib/libRCSwitchAdapter.so&quot;);
-            System.out.println(&quot;Loading Native Libraries:: loading librarys worked&quot;);
-            workingNativeCode = true;
-        } catch (UnsatisfiedLinkError e) {
-            e.printStackTrace();
-        }
-
-        }
-    }
-                    ```
-                &lt;/script&gt;
-            &lt;/section&gt;</code> </pre>
+                <p>CD is not a developer tool.<br />
+                  It's about deployment.</p>
             </section>
+            <section style="width:1000px">
 
-        <section data-markdown>
-                <script type="text/template">
-                    ### Java syntax highlights
-
-                    ```java
-
-        try {
-            System.out.println("Loading Native Libraries:: Path: " + System.getProperty("java.library.path"));
-            //loading a library, there are two ways. but it only gets loaded once so doesnt matter if done twice here
-            System.loadLibrary("RCSwitchAdapter");
-            System.load("/usr/local/lib/libRCSwitchAdapter.so");
-            System.out.println("Loading Native Libraries:: loading librarys worked");
-            workingNativeCode = true;
-        } catch (UnsatisfiedLinkError e) {
-            e.printStackTrace();
-        }
-
-        }
-    }
-                    ```
-                </script>
-            </section>
-
-    </section>
-
-
-        <section>
-            <h2>Präsentationen leben von Bildern und Medien</h2>
-
-            <p>
-                <img src="images/beispiel_grafik.jpg" alt="Platzhalterbild">
-            </p>
-        </section>
-
-        <section>
-            <h2>Number one place of reference:</h2>
-
-            <a href="https://github.com/hakimel/reveal.js">Githubseite von RevealJS</a><br>
-            <a href="http://lab.hakim.se/reveal-js/#/">RevealJS Website</a>
-        </section>
-
-        <section>
-            <h2>Weitere Konfigurationen:</h2>
-            <code>revealjsConfig.js</code>
-            <p>for settings see here: <a href="https://github.com/hakimel/reveal.js#configuration">git config desc</a> </p>
-        </section>
-
-        <section>
-            <h2>Hier ein paar Highlights</h2>
-
-            <p>Klicken Sie sich einfach durch:</p>
-
-            <p class="fragment grow">wachsen</p>
-
-            <p class="fragment shrink">schrumpfen</p>
-
-            <p class="fragment roll-in">Roll-in</p>
-
-            <p class="fragment fade-out">Fade-out</p>
-
-            <p class="fragment highlight-red">Rot</p>
-
-            <p class="fragment highlight-green">Grün</p>
-
-            <p class="fragment highlight-blue">Blau</p>
-        </section>
-
-        <section>
-            <section>
-                <p>Webcam oder externe Kamera Zugriff via HTML5</p>
-
-                <p>Ideal für Demozwecke</p>
-
-                <p>(Funktioniert nur mit lokalem Server)</p>
+                <h3>Devops</h3>
+                <div style="text-align:left">
+                <p>CD makes developers deploy software.</p>
+                <p>&rarr; job of operations department<br />
+                &rarr; CD uses toolchain of operations</p>
+              </div>
             </section>
             <section>
-                <video autoplay controls id="webcamvideo" class="stretch"></video>
+                <h3>Deploy often</h3>
 
-                <!--Webcam access-->
-                <script type="text/javascript" src="js/cameraAccess.js"></script>
+                <p>"If it hurts, do it more often, until it stops hurting"</p>
+                <p class="fragment">&rarr; make the development process reliable</p>
+                <p class="fragment">&rarr; make the deployment reproducible</p>
             </section>
+            <section>
+                <h3>Reliability</h3>
+
+                <p>Put everything under version control - <br />
+                  including your runtime enviroment.</p>
+                <p class="fragment">Automate everything!</p>
+                <p class="fragment">Establish meaningful tests and quality gates.</p>
+                <p class="fragment">You need a trustable delivery process.</p>
+            </section>
+            <section>
+                <h3>Continuous Integration process</h3>
+
+                <p>CD starts where CI stops.</p>
+                <p>Jenkins is only the first step.</p>
+                <p>Thoughtworks Go:</p>
+                <img src="http://www.go.cd/images/home-image1.png" />
+                <p style="font-size:30px">Image source: http://www.go.cd/images/home-image1.png </p>
+            </section>
+
         </section>
-
-
-
         <section>
-            <h2>Käffchen?</h2>
+          <section>
+              <h2>Tools</h2>
+              <p>Virtual machines</p>
+              <p>Vagrant</p>
+              <p>Ansible and Puppet</p>
+              <p>Docker</p>
+          </section>
 
-            <p>Wenn Sie eine kleine Pause einlegen wollen, reicht es die Taste 'b' zu drücken und die Präsentation färbt
-                sich schwarz.
-            </p>
+          <section>
+              <h2>Automated, reliable tests</h2>
+              <p>Green-field approach:</p>
+              <p>Alway test your software in a fresh environment.</p>
+              <ul class="fragment">
+                <li>Create the runtime environment from scratch.</li>
+                <li>Install or compile your software</li>
+                <li>start it</li>
+                <li>run the tests</li>
+                <li>Throw the entire environment away.</li>
+              <ul>
+          </section>
+
+          <section>
+              <h2>Virtual machines</h2>
+
+              <p>Test on multiple runtime environments</p>
+              <ul>
+                <li>Different OS</li>
+                <li>Different JavaEE container</li>
+                <li>Different Java version</li>
+              <p></p>
+          </section>
+          <section>
+              <h2>Vagrant</h2>
+
+              <p>Easy setup of the runtime environment.</p>
+              <p>Based on a script.</p>
+              <p>Put the script under version control.</p>
+              <p>Huge repository of predefined scripts: <a target="#" href="http://www.vagrantbox.es/">VagrantBox.es</a>
+          </section>
+          <section>
+              <h2>Update your OS in five minutes</h2>
+              <code class="fragment">vagrant stop</code><br />
+              <code class="fragment">vagrant destroy</code><br />
+              <p class="fragment">Edit the config file.</p>
+              <code class="fragment">vagrant up</code>
+          </section>
+          <section>
+              <h2>Ansible and Puppet</h2>
+              <p>Install software in a Vagrant box.</p>
+              <p>Based on a script.</p>
+              <div class="fragment">
+              <p>Reinstall your installation in a minute:</p>
+              <code>vagrant stop</code>
+              <code>vagrant destroy</code>
+              <p>Edit the config file.</p>
+              <code>vagrant up</code>
+            </div>
+          </section>
+          <section>
+              <h2>Docker</h2>
+
+              <p>Virtual machine for Linux</p>
+              <p>Similar to Vagrant - but needs less resources</p>
+              <p>Usually used in production</p>
+          </section>
+          <section>
+              <h2>Orcas</h2>
+              <p>Database management tool</p>
+              <p>Reset the database prior to testing</p>
+          </section>
+          <section>
+              <h2>Thoughtworks Go</h2>
+              <p>manages the delivery process</p>
+          </section>
         </section>
-
         <section>
-            <h2>Bei Fragen:</h2>
-            <br>
-            <p><a target="_blank" href="https://portal.opitz-consulting.de/mysite/Person.aspx?accountname=OCGM%5CPBR"> Pascal Brokmeier (PBR)</a></p>
-            <br>
-            <p>Wer mir einen gefallen tun will  &#9733; das Repo auf Github, damit ich sehe ob und wie viel die Vorlage genutzt wird. Auch sind Updates dann besser zu verteilen. </p>
-
+          <section>
+            <h2>Miscelleaneous</h2>
+          </section>
+          <section>
+            <h2>Install MediaWiki in five minutes</h2>
+            <p>(plus time for download)</p>
+            <code>
+              git clone --recursive https://gerrit.wikimedia.org/r/mediawiki/vagrant</code><br />
+              <code>cd vagrant</code><br />
+              <code>./setup.sh  # or setup.bat on Windows</code><br />
+              <code> vagrant up </code><br />
+              <br />
+            <p><a target="#" href="http://www.beyondjava.net/blog/vagrant-makes-installing-mediawiki-simple-and-painless/">I've blogged about it :)</a>
+          </section>
         </section>
-
+        <section>
+          <h2>Questions?</h2>
+        </section>
     </div>
 
 </div>
