Implemented basic navigation

--- a/BootsFacesPresentation/src/main/webapp/1_intro/start2.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/start2.xhtml
@@ -13,19 +13,26 @@
   <b:row>
     <b:column col-md="6">
       <b:panel title="BootsFaces" look="primary" style="height:330px">
-        <img src="bsf_logo.png"
-          style="width: 100%; height: 100%; padding-top: 50px" />
+        <ul>
+          <li>next-generation JSF framework</li>
+          <li>HTML5 at your finger tips</li>
+          <li>Bootstrap 3.3 made easy</li>
+          <li>Advanced AJAX</li>
+          <li>48 components and counting</li>
+          <li>Mobile first!</li>
+        </ul>
 
       </b:panel>
     </b:column>
     <b:column col-md="6">
       <b:panel title="AngularFaces" look="success" style="height:330px">
-        <img src="AngularJS-Shield-large.png"
-          style="width: 50%; height: 50%; padding-top: 10px" />
-        <span style="font-size: 20pt; padding-left: 10px">meets</span>
-        <span
-          style="font-size: 36pt; position: relative; top: 10px; left: 10px">
-          JSF</span>
+        <ul>
+          <li>AngularJS 1.3 meets JSF 2.2</li>
+          <li>rapid prototyping features</li>
+          <li>internationalization</li>
+          <li>simplified JSF markup</li>
+          <li>business logic to the client</li>
+        </ul>
       </b:panel>
     </b:column>
   </b:row>
@@ -33,27 +40,31 @@
     <b:column col-xs="6" />
     <b:column col-xs="1">
       <b:row>
-       <b:column col-xs="1" />
+        <b:column col-xs="1" />
         <b:column col-xs="1">
-          <b:button iconAwesome="chevron-up" look="default" />
+          <b:button iconAwesome="chevron-up" 
+            look="default" />
         </b:column>
       </b:row>
       <b:row>
         <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" 
-            look="default" />
+          <b:button iconAwesome="chevron-left" fragment="#start"
+            look="primary" />
         </b:column>
         <b:column col-xs="1">
-          <b:button iconAwesome="chevron-right" fragment="#start2" look="primary" style="margin-left:30px" />
+          <b:button iconAwesome="chevron-right"
+            fragment="#gridSystem" look="primary"
+            style="margin-left:30px" />
         </b:column>
       </b:row>
       <b:row>
         <b:column col-xs="1" />
         <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" look="default" />
+          <b:button iconAwesome="chevron-down" 
+            look="default" />
         </b:column>
       </b:row>
-      </b:column>
-     </b:row>
+    </b:column>
+  </b:row>
 
 </ui:fragment>
