--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
@@ -7,7 +7,7 @@
 
 
   <center>
-    <h1>Modern HTML5 for JSF programmers</h1>
+    <h1>BootsFaces at a glance</h1>
   </center>
   <p style="height: 30px" />
   <b:row>
@@ -48,20 +48,20 @@
       </b:row>
       <b:row>
         <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" fragment="#start"
+          <b:button iconAwesome="chevron-left" fragment="#start2"
             look="primary" />
         </b:column>
         <b:column col-xs="1">
           <b:button iconAwesome="chevron-right"
-            fragment="#keyFeaturesBF" look="primary"
+            fragment="#keyFeaturesAF" look="primary"
             style="margin-left:30px" />
         </b:column>
       </b:row>
       <b:row>
         <b:column col-xs="1" />
         <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" 
-            look="default" />
+          <b:button iconAwesome="chevron-down" fragment="#gridSystem"
+            look="primary" />
         </b:column>
       </b:row>
     </b:column>
