added an AngularJS navigation component (inspired by reveal.js)

--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
@@ -36,35 +36,9 @@
       </b:panel>
     </b:column>
   </b:row>
-  <b:row>
-    <b:column col-xs="6" />
-    <b:column col-xs="1">
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-up" 
-            look="default" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" fragment="#start2"
-            look="primary" />
-        </b:column>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-right"
-            fragment="#keyFeaturesAF" look="primary"
-            style="margin-left:30px" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" fragment="#gridSystem"
-            look="primary" />
-        </b:column>
-      </b:row>
-    </b:column>
-  </b:row>
+  
+  <navigator left="#start2" right="#keyFeaturesAF" down="#gridSystem"/>
+  
+
 
 </ui:fragment>
