--- a/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
@@ -29,31 +29,5 @@
       </b:panel>
     </b:column>
   </b:row>
-  <b:row>
-    <b:column col-xs="6" />
-    <b:column col-xs="1">
-      <b:row>
-       <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-up" look="default" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" 
-            look="default" />
-        </b:column>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-right" fragment="#start2" look="primary" style="margin-left:30px" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" look="default" />
-        </b:column>
-      </b:row>
-      </b:column>
-     </b:row>
-
+  <navigator right="#start2"/>
 </ui:fragment>
