--- a/BootsFacesPresentation/src/main/webapp/1_intro/start2.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/start2.xhtml
@@ -36,35 +36,7 @@
       </b:panel>
     </b:column>
   </b:row>
-  <b:row>
-    <b:column col-xs="6" />
-    <b:column col-xs="1">
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-up" 
-            look="default" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" fragment="#start"
-            look="primary" />
-        </b:column>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-right"
-            fragment="#keyFeaturesBF" look="primary"
-            style="margin-left:30px" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" 
-            look="default" />
-        </b:column>
-      </b:row>
-    </b:column>
-  </b:row>
-
+  
+  <navigator left="#start" right="#keyFeaturesBF"/>
+  
 </ui:fragment>
