--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
@@ -17,34 +17,9 @@
     </b:column>
 
   </b:row>
+  
+    <navigator up="#keyFeaturesBF" down="#hidingColumns"/>
+  
 
-  <b:row>
-    <b:column col-xs="6" />
-    <b:column col-xs="1">
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-up" fragment="#start"
-            look="default" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" look="primary" fragment="#start" />
-        </b:column>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-right"
-             look="default"
-            style="margin-left:30px" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" fragment="#hidingColumns"  
-            look="primary" />
-        </b:column>
-      </b:row>
-    </b:column>
-  </b:row>
+ 
 </ui:fragment>
