--- a/BootsFacesPresentation/src/main/webapp/2_layout/hidingColumns.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/hidingColumns.xhtml
@@ -66,35 +66,7 @@
                 Visible on large screen only.
                 </b:column>
   </b:row>
-
-  <b:row>
-    <b:column col-xs="6" />
-    <b:column col-xs="1">
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-up" fragment="#gridSystem"
-            look="primary" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" 
-            look="default" />
-        </b:column>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-right"
-            fragment="#hidingColumns" look="default"
-            style="margin-left:30px" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" fragment="#other"
-            look="primary" />
-        </b:column>
-      </b:row>
-    </b:column>
-    </b:row>
+  
+  <navigator up="#gridSystem"/>
+  
 </ui:fragment>
