--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
@@ -36,35 +36,6 @@
       </b:panel>
     </b:column>
   </b:row>
-  <b:row>
-    <b:column col-xs="6" />
-    <b:column col-xs="1">
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-up" 
-            look="default" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-left" fragment="#keyFeaturesBF"
-            look="primary" />
-        </b:column>
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-right"
-            fragment="#gridSystem" look="default"
-            style="margin-left:30px" />
-        </b:column>
-      </b:row>
-      <b:row>
-        <b:column col-xs="1" />
-        <b:column col-xs="1">
-          <b:button iconAwesome="chevron-down" fragment="#angularJS"
-            look="primary" />
-        </b:column>
-      </b:row>
-    </b:column>
-  </b:row>
 
+  <navigator left="#keyFeaturesBF" down="#angularJS" />
 </ui:fragment>
