--- a/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
@@ -6,34 +6,18 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <center>
-    <h1>AngularJS for JSF programmers</h1>
-  </center>
-  <p style="height: 30px" />
+  <header title="AngularJS for JSF programmers" />
   <b:row>
-    <b:column col-md="6">
-      <b:panel title="BootsFaces" look="primary" style="height:330px">
+    <b:column col-md="12">
         <ul>
-          <li>next-generation JSF framework</li>
-          <li>HTML5 at your finger tips</li>
-          <li>Bootstrap 3.3 made easy</li>
-          <li>Advanced AJAX</li>
-          <li>48 components and counting</li>
-          <li>Mobile first!</li>
+          <li>leverage the power of the client</li>
+          <li>reduce the server load</li>
+          <li>less network traffic</li>
+          <li>use powerful client-side components:</li>
+          <li>ngTable, smart-table, ...</li>
+          <li>define your own client-side components</li>
+          <li>AngularJS routing and templating</li>
         </ul>
-
-      </b:panel>
-    </b:column>
-    <b:column col-md="6">
-      <b:panel title="AngularFaces" look="success" style="height:330px">
-        <ul>
-          <li>AngularJS 1.3 meets JSF 2.2</li>
-          <li>rapid prototyping features</li>
-          <li>internationalization</li>
-          <li>simplified JSF markup</li>
-          <li>business logic to the client</li>
-        </ul>
-      </b:panel>
     </b:column>
   </b:row>
   
