--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
@@ -6,34 +6,21 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <center>
-    <h1>AngularFaces overview</h1>
-  </center>
-  <p style="height: 30px" />
+  <header title="AngularFaces in a nutshell" />
   <b:row>
-    <b:column col-md="6">
-      <b:panel title="BootsFaces" look="primary" style="height:330px">
-        <ul>
-          <li>next-generation JSF framework</li>
-          <li>HTML5 at your finger tips</li>
-          <li>Bootstrap 3.3 made easy</li>
-          <li>Advanced AJAX</li>
-          <li>48 components and counting</li>
-          <li>Mobile first!</li>
-        </ul>
-
-      </b:panel>
-    </b:column>
-    <b:column col-md="6">
-      <b:panel title="AngularFaces" look="success" style="height:330px">
-        <ul>
-          <li>AngularJS 1.3 meets JSF 2.2</li>
-          <li>rapid prototyping features</li>
+    <b:column col-md="12">
+     <b:panel title="JSF on steroids" look="success" >
+         <ul>
+          <li>AngularJS 1.3</li>
+          <li>next stop: Angular2!</li>
+          <li>client-side components</li>
+          <li>client-side validation</li>
           <li>internationalization</li>
-          <li>simplified JSF markup</li>
-          <li>business logic to the client</li>
+          <li>Advanced AJAX</li>
+          <li>relaxed HTML-like code</li>
         </ul>
-      </b:panel>
+        </b:panel>
+
     </b:column>
   </b:row>
 
