--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
@@ -6,13 +6,10 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <center>
-    <h1>BootsFaces at a glance</h1>
-  </center>
-  <p style="height: 30px" />
+  <header title="BootsFaces at a glance" />
   <b:row>
-    <b:column col-md="6">
-      <b:panel title="BootsFaces" look="primary" style="height:330px">
+    <b:column col-md="12">
+      <b:panel title="responsive JSF" look="primary" >
         <ul>
           <li>next-generation JSF framework</li>
           <li>HTML5 at your finger tips</li>
@@ -24,20 +21,9 @@
 
       </b:panel>
     </b:column>
-    <b:column col-md="6">
-      <b:panel title="AngularFaces" look="success" style="height:330px">
-        <ul>
-          <li>AngularJS 1.3 meets JSF 2.2</li>
-          <li>rapid prototyping features</li>
-          <li>internationalization</li>
-          <li>simplified JSF markup</li>
-          <li>business logic to the client</li>
-        </ul>
-      </b:panel>
-    </b:column>
   </b:row>
   
-  <navigator left="#start2" right="#keyFeaturesAF" down="#gridSystem"/>
+  <navigator left="#start" right="#keyFeaturesAF" down="#gridSystem"/>
   
 
 
