--- a/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
@@ -4,22 +4,19 @@
   xmlns:b="http://bootsfaces.net/ui"
   xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:p="http://primefaces.org/ui">
-
-
-  <center>
-    <h1>Modern HTML5 for JSF programmers</h1>
-  </center>
-  <p style="height: 30px" />
+  
+  <header title="Modern HTML5 for JSF programmers" />
+  
   <b:row>
     <b:column col-md="6">
-      <b:panel title="BootsFaces" look="primary" style="height:330px">
+      <b:panel title="BootsFaces" look="primary" style="height:450px">
         <img src="bsf_logo.png"
           style="width: 100%; height: 100%; padding-top: 50px" />
 
       </b:panel>
     </b:column>
     <b:column col-md="6">
-      <b:panel title="AngularFaces" look="success" style="height:330px">
+      <b:panel title="AngularFaces" look="success" style="height:450px">
         <img src="AngularJS-Shield-large.png"
           style="width: 50%; height: 50%; padding-top: 10px" />
         <span style="font-size: 20pt; padding-left: 10px">meets</span>
@@ -29,5 +26,5 @@
       </b:panel>
     </b:column>
   </b:row>
-  <navigator right="#start2"/>
+  <navigator right="#keyFeaturesBF" />
 </ui:fragment>
