--- a/BootsFacesPresentation/src/main/webapp/footer.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/footer.xhtml
@@ -5,6 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:b="http://bootsfaces.net/ui">
 
-    <b:navBar style="font-size:10px !important" brand="&copy; 2016 Opitz Consulting, Stephan Rauh and Riccardo Massera" brandHref="http://www.thecoder4.eu/" fixed="bottom">
+    <b:navBar fixed="bottom" styleClass="hidden-xs hidden-sm">
+    <h5>&copy; 2016 Opitz Consulting, Stephan Rauh and Riccardo Massera</h5>
     </b:navBar>
 </ui:fragment>
