--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
@@ -6,7 +6,7 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="AngularFaces in a nutshell" />
+  <header title="AngularFaces in a Nutshell" />
   <b:row>
     <b:column col-md="12">
      <b:panel title="JSF on steroids" look="success" >
