--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
@@ -6,7 +6,7 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="BootsFaces at a glance" />
+  <header title="BootsFaces at a Glance" />
   <b:row>
     <b:column col-md="12">
       <b:panel title="responsive JSF" look="primary" >
