--- a/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
@@ -5,7 +5,7 @@
   xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:p="http://primefaces.org/ui">
   
-  <header title="Modern HTML5 for JSF programmers" />
+  <header title="Modern HTML5 for JSF Programmers" />
   
   <b:row>
     <b:column col-md="6">
@@ -26,5 +26,5 @@
       </b:panel>
     </b:column>
   </b:row>
-  <navigator right="#keyFeaturesBF" />
+  <navigator right="#keyFeaturesBF" down="#dogFood"/>
 </ui:fragment>
