--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
@@ -8,7 +8,7 @@
   xmlns:ac="http://beyondjava.net/angularFacesCore">
 
 
-  <header title="Grid system explained" />
+  <header title="Bootstrap Grid System Explained" />
   <b:row>
     <b:column hidden="xs" col-xs="12">
       <ul>
