--- a/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
@@ -6,7 +6,7 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="AngularJS for JSF programmers" />
+  <header title="AngularJS for JSF Programmers" />
   <b:row>
     <b:column col-md="12">
         <ul>
@@ -21,5 +21,5 @@
     </b:column>
   </b:row>
   
-   <navigator up="#keyFeaturesAF"/>
+   <navigator up="#keyFeaturesAF" down="ngComponents"/>
 </ui:fragment>
