--- a/BootsFacesPresentation/src/main/webapp/2_layout/hidingColumns.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/hidingColumns.xhtml
@@ -8,7 +8,7 @@
   xmlns:ac="http://beyondjava.net/angularFacesCore">
 
 
-  <header title="Hiding columns on small screens" />
+  <header title="Hiding Columns on Small Screens" />
   <b:row>
     <b:column hidden="xs" col-xs="12" col-sm="6" col-md="4" col-lg="3" styleClass="withBorder">
       <code>&lt;b:column hidden="xs" &gt;</code>
