--- a/BootsFacesPresentation/src/main/webapp/footer.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/footer.xhtml
@@ -6,6 +6,6 @@
       xmlns:b="http://bootsfaces.net/ui">
 
     <b:navBar fixed="bottom" styleClass="hidden-xs hidden-sm">
-    <h5>&copy; 2016 Opitz Consulting, Stephan Rauh and Riccardo Massera</h5>
+    <h5>Running on BoosFaces 0.8.1, AngularFaces 2.1.9, JSF 2.2, PrimeFaces 5.3</h5>
     </b:navBar>
 </ui:fragment>
