added more slides

--- a/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
@@ -21,5 +21,5 @@
     </b:column>
   </b:row>
   
-   <navigator up="#keyFeaturesAF" down="ngComponents"/>
+   <navigator up="#keyFeaturesAF" down="ngComponents" right="integration"/>
 </ui:fragment>
