--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
@@ -8,14 +8,16 @@
 
   <header title="BootsFaces at a Glance" />
   <b:row>
-    <b:column col-md="12">
+    <b:column col-md="11">
       <b:panel title="responsive JSF" look="primary" >
         <ul>
           <li>next-generation JSF framework</li>
           <li>HTML5 at your finger tips</li>
           <li>Bootstrap 3.3 made easy</li>
+          <li>Next stop: Bootstrap 4</li>
           <li>Advanced AJAX</li>
           <li>48 components and counting</li>
+          <li>Bootswatch themes</li>
           <li>Mobile first!</li>
         </ul>
 
