--- a/BootsFacesPresentation/src/main/webapp/90_questions/questions.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/90_questions/questions.xhtml
@@ -6,16 +6,12 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="Roadmap for AngularFaces" />
+  <header title="Any Questions?" />
   <b:row>
     <b:column col-md="12">
-        <ul>
-          <li>2.1 branch: only bug fixes as needed</li>
-          <li>2.2 branch: Based on Angular2
-          <br />(not started yet)</li>
-        </ul>
+        <h3>Now it's your turn!</h3>
     </b:column>
   </b:row>
   
-   <navigator left="#roadmapBF" right="questions" />
+   <navigator left="roadmapAF"/>
 </ui:fragment>
