--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
@@ -24,5 +24,5 @@
     </b:column>
   </b:row>
 
-  <navigator left="#keyFeaturesBF" down="#angularJS" />
+  <navigator left="#keyFeaturesBF" down="#angularJS" right="integration" />
 </ui:fragment>
