added slides and source code

--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystemStack.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystemStack.xhtml
@@ -15,13 +15,13 @@
 		</b:column>
 	</b:row>
 	<b:row>
-		<b:column col-xs="4" ng-repeat="column in three">
-			<b:panel title="4 columns" look="primary"  collapsible="false"/>
+		<b:column col-sm="4" ng-repeat="column in three">
+			<b:panel title="col-sm='4'" look="primary"  collapsible="false"/>
 		</b:column>
 	</b:row>
 	<b:row>
-		<b:column col-xs="4" ng-repeat="column in three">
-			<b:panel title="4 columns" look="primary"  collapsible="false"/>
+		<b:column col-md="4" ng-repeat="column in three">
+			<b:panel title="col-xm='4'" look="primary"  collapsible="false"/>
 		</b:column>
 	</b:row>
 	<b:row>
@@ -29,8 +29,7 @@
 			<b:panel title="footer consisting of 12 columns" look="primary" collapsible="false"/>
 		</b:column>
 	</b:row>
-	
-	<navigator up="#keyFeaturesBF" down="gridSystemStack" right="gridSystemSourcecode"/>
+	<navigator up="gridSystem" down="#hidingColumns" right="gridSystemStackSourcecode"/>
 
 
 
