--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystemStack.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystemStack.xhtml
@@ -21,7 +21,7 @@
 	</b:row>
 	<b:row>
 		<b:column col-md="4" ng-repeat="column in three">
-			<b:panel title="col-xm='4'" look="primary"  collapsible="false"/>
+			<b:panel title="col-md='4'" look="primary"  collapsible="false"/>
 		</b:column>
 	</b:row>
 	<b:row>
