added more slides and a login screen

--- a/BootsFacesPresentation/src/main/webapp/11_angularFaces/relaxedMarkup.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/11_angularFaces/relaxedMarkup.xhtml
@@ -6,11 +6,11 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="ngTable" />
+  <header title="Relaxed, HTML-like JSF Code" />
   <b:row>
     <b:column col-md="12">
      </b:column>
   </b:row>
   
-   <navigator up="#ngComponents" down="i18n"/>
+   <navigator up="ajaxAF" />
 </ui:fragment>
