--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <ui:fragment xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:b="http://bootsfaces.net/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:ng="http://xmlns.jcp.org/jsf/passthrough"
-	xmlns:ac="http://beyondjava.net/angularFacesCore">
+  xmlns:h="http://java.sun.com/jsf/html"
+  xmlns:f="http://java.sun.com/jsf/core"
+  xmlns:b="http://bootsfaces.net/ui"
+  xmlns:ui="http://java.sun.com/jsf/facelets"
+  xmlns:ng="http://xmlns.jcp.org/jsf/passthrough"
+  xmlns:ac="http://beyondjava.net/angularFacesCore">
 
 
-	<header title="Bootstrap Grid System Explained" />
-	<b:row>
-		<b:column col-xs="12">
-			<b:panel title="header consisting of 12 columns" look="primary" collapsible="false"/>
-		</b:column>
-	</b:row>
-	<b:row>
-		<b:column col-xs="4" ng-repeat="column in three">
-			<b:panel title="4 columns" look="primary"  collapsible="false"/>
-		</b:column>
-	</b:row>
-	<b:row>
-		<b:column col-xs="4" ng-repeat="column in three">
-			<b:panel title="4 columns" look="primary"  collapsible="false"/>
-		</b:column>
-	</b:row>
-	<b:row>
-		<b:column col-xs="12"	>
-			<b:panel title="footer consisting of 12 columns" look="primary" collapsible="false"/>
-		</b:column>
-	</b:row>
-	
-	<navigator up="#keyFeaturesBF" down="gridSystemStack" right="gridSystemSourcecode"/>
+  <header title="Bootstrap Grid System Explained" />
+  <b:row>
+    <b:column col-xs="12">
+      <b:panel title="header consisting of 12 columns" look="primary"
+        collapsible="false" />
+    </b:column>
+  </b:row>
+  <b:row>
+    <b:column col-xs="4" ng-repeat="column in three">
+      <b:panel title="4 columns" look="primary" collapsible="false" />
+    </b:column>
+  </b:row>
+  <b:row>
+    <b:column col-xs="4" ng-repeat="column in three">
+      <b:panel title="4 columns" look="primary" collapsible="false" />
+    </b:column>
+  </b:row>
+  <b:row>
+    <b:column col-xs="12">
+      <b:panel title="footer consisting of 12 columns" look="primary"
+        collapsible="false" />
+    </b:column>
+  </b:row>
+  <navigator up="#keyFeaturesBF" down="gridSystemStack"
+    right="gridSystemSourcecode" />
 
 
 
