--- a/BootsFacesPresentation/src/main/webapp/20_integration/integration.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/20_integration/integration.xhtml
@@ -34,5 +34,5 @@
     </b:column>
   </b:row>
   
-   <navigator up="#keyFeaturesAF" down="ngComponents" left="keyFeaturesAF" right="roadmapBF"/>
+   <navigator left="keyFeaturesAF" right="roadmapBF"/>
 </ui:fragment>
