--- a/BootsFacesPresentation/src/main/webapp/index.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/index.xhtml
@@ -6,23 +6,35 @@
   xmlns:b="http://bootsfaces.net/ui"
   xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
-  <h:head>
-    <ui:include src="header.xhtml" />
-    <ui:include src="syntaxhighlighter.xhtml" />
-  </h:head>
-  <h:body>
-    <h:outputScript library="AngularJS" name="angular-route.js"></h:outputScript>
-    <script src="controllers.js"></script>
-    <script src="navigation.js"></script>
-    
-    <b:panel rendered="false" />
-  
-    <b:container ng-app="navigationApp">
-      <div ng-view=""></div>
-    </b:container>
-  
-    <ui:insert name="nbtop">
-      <ui:include src="/footer.xhtml" />
-    </ui:insert>
-  </h:body>
+<h:head>
+  <ui:include src="header.xhtml" />
+  <ui:include src="syntaxhighlighter.xhtml" />
+</h:head>
+<h:body>
+  <h:outputScript library="AngularJS" name="angular-route.js"></h:outputScript>
+  <script src="controllers.js"></script>
+  <script src="navigation.js"></script>
+
+  <b:panel rendered="false" />
+  <b:carousel rendered="false" />
+  <b:tabView rendered="false" />
+  <b:tab rendered="false" />
+
+
+  <b:container ng-app="navigationApp">
+    <h:form>
+      <b:panel title="Please log in" look="primary">
+        <b:panelGrid colSpans="3,3,6">
+          <b:inputText value="#{loginBean.username}" />
+          <b:inputSecret value="#{loginBean.password}" />
+        </b:panelGrid>
+        <b:commandButton value="login" action="#{loginBean.login}" />
+      </b:panel>
+    </h:form> 
+  </b:container>
+
+  <ui:insert name="nbtop">
+    <ui:include src="/footer.xhtml" />
+  </ui:insert>
+</h:body>
 </html>
