added a "contribution" slide

--- a/BootsFacesPresentation/src/main/webapp/90_questions/contribution.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/90_questions/contribution.xhtml
@@ -9,10 +9,10 @@
   <header title="Any Questions?" />
   <b:row>
     <b:column col-md="12">
-      <h3>Now it's your turn!</h3>
+        <h3>Now it's your turn!</h3>
     </b:column>
   </b:row>
-  <b:row>
+ <b:row>
     <b:column col-md="6" style="padding-top:20px">
 
       <b:panel title="BootsFaces" look="primary" style="height:370px">
@@ -32,6 +32,13 @@
       </b:panel>
     </b:column>
   </b:row>
-
-  <navigator left="roadmapAF" down="contribution" />
+  
+    <b:row>
+    <b:column col-md="12">
+        <h3>Talking of which:</h3>
+        <h3>Do you want to help us foster our pet frameworks?</h3>
+    </b:column>
+  </b:row>
+  
+   <navigator up="questions"/>
 </ui:fragment>
